<resources>
    <string name="app_name">Codewars</string>

    <string name="members_activity_search_hint">Search by username or id</string>

    <string name="members_activity_recent_searches">Recent searches:</string>
    <string name="members_activity_no_searches_label">Your search history appears here</string>

    <string name="member_item_view_label_name">Name:</string>
    <string name="member_item_view_label_rank">Rank:</string>
    <string name="member_item_view_label_best_language">Best language:</string>
    <string name="member_item_view_label_leaderboard">Leaderboard position:</string>

    <string name="challenge_activity_menu_item_authored">Authored</string>
    <string name="challenge_activity_menu_item_completed">Completed</string>

    <string name="authored_challenge_item_view_label_name">Name:</string>
    <string name="authored_challenge_item_view_label_description">Description:</string>
    <string name="authored_challenge_item_view_label_languages">Languages:</string>
    <string name="authored_challenge_item_view_label_tags">Tags:</string>

    <string name="completed_challenge_item_view_label_name">Name:</string>
    <string name="completed_challenge_item_view_label_slug">Slug:</string>
    <string name="completed_challenge_item_view_label_completed_languages">Completed languages:</string>
    <string name="completed_challenge_item_view_label_completed_at">Completed at:</string>

    <string name="generic_error">There was an error, please try again</string>
    <string name="no_authored_challenges_label">This user does not have any authored challenges</string>
    <string name="no_completed_challenges_label">This user does not have any completed challenges</string>
    <string name="some_error">Some exceptions occurred.</string>
</resources>
