<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    android:id="@+id/challengeCardView"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/spacing_small"
    android:animateLayoutChanges="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/spacing_medium">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingTop="@dimen/spacing_x_small">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/completed_challenge_item_view_label_name"
                android:textSize="@dimen/label" />

            <TextView
                android:id="@+id/challengeNameTv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_small"
                android:layout_weight="1"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/regular"
                tools:text="challenge name" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/spacing_x_small">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:text="@string/completed_challenge_item_view_label_slug"
                android:textSize="@dimen/label" />

            <TextView
                android:id="@+id/challengeSlugTv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_small"
                android:layout_weight="1"
                android:maxLines="7"
                android:ellipsize="end"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/regular"
                tools:text="challenge slug" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/spacing_x_small">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/completed_challenge_item_view_label_completed_at"
                android:textSize="@dimen/label" />

            <TextView
                android:id="@+id/challengeCompletedAtTv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_small"
                android:layout_weight="1"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/regular"
                tools:text="completed at" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingTop="@dimen/spacing_x_small">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/completed_challenge_item_view_label_completed_languages"
                android:textSize="@dimen/label" />

            <TextView
                android:id="@+id/challengeLanguagesTv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_small"
                android:layout_weight="1"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/regular"
                tools:text="languages" />

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>