<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true"
    android:orientation="vertical"
    android:layout_marginBottom="@dimen/spacing_small">

    <LinearLayout
        android:id="@+id/parentLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/spacing_medium">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingTop="@dimen/spacing_x_small">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/member_item_view_label_name"
                android:textSize="@dimen/label" />

            <TextView
                android:id="@+id/memberNameTv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_small"
                android:layout_weight="1"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/regular"
                tools:text="member name" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingTop="@dimen/spacing_x_small">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/member_item_view_label_rank"
                android:textSize="@dimen/label" />

            <TextView
                android:id="@+id/memberRankTv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_small"
                android:layout_weight="1"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/regular"
                tools:text="member rank" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingTop="@dimen/spacing_x_small">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/member_item_view_label_leaderboard"
                android:textSize="@dimen/label" />

            <TextView
                android:id="@+id/memberLeaderboardTv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_small"
                android:layout_weight="1"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/regular"
                tools:text="2345" />

        </LinearLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>